removed the need of tempate "remove-outerspace" for dl outputclasses

--- a/test/conbat/definition-list.dita
+++ b/test/conbat/definition-list.dita
@@ -117,7 +117,9 @@
 				</dlentry>
 				<dlentry>
 					<dt>Term 2</dt>
-					<dd>Description of 2nd term.</dd>
+					<dd>
+						<p id="jgj_1q5_vy">Description of 2nd term.</p>
+					</dd>
 				</dlentry>
 				<dlentry>
 					<dt>Term 3</dt>
@@ -136,7 +138,7 @@
 				</dlentry>
 				<dlentry>
 					<dt>Term 2</dt>
-					<dd>Description of 2nd term.</dd>
+					<dd><p>Description of 2nd term.</p></dd>
 				</dlentry>
 				<dlentry>
 					<dt>Term 3</dt>
@@ -148,23 +150,17 @@
 			<title>Header Table</title>
 			<p id="q4p_2ht_1y">Outputclass: <codeph>header-table</codeph></p>
 			<dl outputclass="header-table">
-				<dd cba:dt="Term 1">
-					<p id="qw1_qqc_2y">Description of 1st term.</p>
-				</dd>
+				<dd cba:dt="Term 1">Description of 1st term.</dd>
 				<dd cba:dt="Term 2">
 					<p id="l1x_cjx_gy">Description of 2nd term.</p>
 				</dd>
-				<dd cba:dt="Term 3">
-					<p id="u3g_2jx_gy">Description of 3rd term.</p>
-				</dd>
+				<dd cba:dt="Term 3">Description of 3rd term.</dd>
 			</dl>
 			<p id="r4p_2ht_1y">Reference <codeph>dl</codeph> element without Conbat:</p>
 			<dl outputclass="header-table">
 				<dlentry>
 					<dt>Term 1</dt>
-					<dd>
-						<p id="ecs_pqc_2y">Description of 1st term.</p>
-					</dd>
+					<dd>Description of 1st term.</dd>
 				</dlentry>
 				<dlentry>
 					<dt>Term 2</dt>
@@ -174,9 +170,7 @@
 				</dlentry>
 				<dlentry>
 					<dt>Term 3</dt>
-					<dd>
-						<p id="mcg_trc_2y">Description of 3rd term.</p>
-					</dd>
+					<dd>Description of 3rd term.</dd>
 				</dlentry>
 			</dl>
 		</section>
@@ -184,23 +178,17 @@
 			<title>Parameter Table</title>
 			<p id="ayk_zm2_hy">Outputclass: <codeph>parameter-table</codeph></p>
 			<dl outputclass="parameter-table">
-				<dd cba:dt="Term 1">
-					<p id="byk_zm2_hy">Description of 1st term.</p>
-				</dd>
+				<dd cba:dt="Term 1">Description of 1st term.</dd>
 				<dd cba:dt="Term 2">
 					<p id="cyk_zm2_hy">Description of 2nd term.</p>
 				</dd>
-				<dd cba:dt="Term 3">
-					<p id="dyk_zm2_hy">Description of 3rd term.</p>
-				</dd>
+				<dd cba:dt="Term 3">Description of 3rd term.</dd>
 			</dl>
 			<p id="eyk_zm2_hy">Reference <codeph>dl</codeph> element without Conbat:</p>
 			<dl outputclass="parameter-table">
 				<dlentry>
 					<dt>Term 1</dt>
-					<dd>
-						<p id="fyk_zm2_hy">Description of 1st term.</p>
-					</dd>
+					<dd>Description of 1st term.</dd>
 				</dlentry>
 				<dlentry>
 					<dt>Term 2</dt>
@@ -210,9 +198,7 @@
 				</dlentry>
 				<dlentry>
 					<dt>Term 3</dt>
-					<dd>
-						<p id="hyk_zm2_hy">Description of 3rd term.</p>
-					</dd>
+					<dd>Description of 3rd term.</dd>
 				</dlentry>
 			</dl>
 		</section>
